--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
-    "ATOM_API_KEY": "ffbd8e6e8975ae69442718698cda94a4",
-    "GOOGLE_MAPS_API_KEY": "AIzaSyDJaL2URun9X-kT4kTH-PNcK8xU-BnPmkE"
+    "ATOM_API_KEY": "022d02f9aa50dbe6177cab9bd8005fcc",
+    "GOOGLE_MAPS_API_KEY": "AIzaSyDJaL2URun9X-kT4kTH-PNcK8xU-BnPmkE",
+    "REICONTROL_API_KEY": "8897b360feadf1eef39f0c936b702e08"
 }
