--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
     "create-react-class": "^15.7.0",
+    "form-data": "^4.0.0",
     "google-maps-react": "^2.0.6",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
