--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
+    "react-calendly": "^4.0.1",
     "react-dom": "^18.0.0",
     "react-geocode": "^0.2.3",
     "react-moment": "^1.1.2",
