Fixed calendly link, Changed Instant offer font & added phone number to appointment screen

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,7 @@
 {
     "ATOM_API_KEY": "ffbd8e6e8975ae69442718698cda94a4",
     "GOOGLE_MAPS_API_KEY": "AIzaSyDL7P-4OxX7jqw3bO5gjMLJRxk69caIdEM",
-    "REICONTROL_API_KEY": "8897b360feadf1eef39f0c936b702e08"
+    "REICONTROL_API_KEY": "8897b360feadf1eef39f0c936b702e08",
+    "CALENDLY_LINK": "https://calendly.com/sellmyhousefastsatx/phone-call",
+    "CALENDLY_CONTRACT_LINK": "https://calendly.com/sellmyhousefastsatx/review-contract"
 }
