Fixed address & favicon

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
+    "APP_URL" : "https://60seconds.ml/",
     "ATOM_API_KEY": "ffbd8e6e8975ae69442718698cda94a4",
     "GOOGLE_MAPS_API_KEY": "AIzaSyDL7P-4OxX7jqw3bO5gjMLJRxk69caIdEM",
     "REICONTROL_API_KEY": "8897b360feadf1eef39f0c936b702e08",
